{
    "version": 1,
    "name": "PlayerControls",
    "maps": [
        {
            "name": "DefaultActions",
            "id": "9e7eac11-138b-4591-bf9d-f27059d330b5",
            "actions": [
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "de539fa0-01cb-4ce8-9f72-58a95f16e146",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pick",
                    "type": "Button",
                    "id": "8afe64f3-751f-435f-9fe2-f3d1d59bc050",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2458545e-90fc-47ca-8e00-1a45eaaaf90a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3c09162-143c-4e2f-8e04-255e2bdbe187",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "InGame",
            "bindingGroup": "InGame",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "OutGame",
            "bindingGroup": "OutGame",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}